vlib/v/checker/tests/const_match_range_duplicate_case_err.out
vlib/v/checker/tests/const_match_range_duplicate_case_err.vv:9:2: error: match case `2` is handled more than once
    7 |         println(1)
    8 |     }
    9 |     start...end {
      |     ~~~~~~~~~~~
   10 |         println(3)
   11 |     }
vlib/v/checker/tests/const_match_range_duplicate_case_err.vv:21:2: error: match case `2` is handled more than once
   19 |         1
   20 |     }
   21 |     start...end {
      |     ~~~~~~~~~~~
   22 |         3
   23 |     }
